[package]
name = "browser_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = "0.18.2"
gfx_text = "0.26.0"
gfx_window_glutin = "0.31.0"
glutin = "0.24.0"

[[bin]]
name = "main"
path = "bin/main.rs"
